--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>Rikcat Adventure — Online Emotes 5</title>
+<title>Rikcat Adventure — Online Salas 1</title>
 
 <style>
 body{
@@ -22,22 +22,34 @@ body{
   flex-direction:column;
   align-items:center;
   justify-content:center;
-  gap:12px;
+  gap:15px;
   z-index:10;
 }
-#titleScreen h1{color:white;font-size:38px;}
-#titleScreen input{
-  font-size:18px;
-  padding:8px;
-  border-radius:8px;
-  border:none;
-  text-align:center;
+#titleScreen h1{
+  color:white;
+  font-size:42px;
 }
 #titleScreen button{
-  font-size:20px;
-  padding:10px 26px;
+  font-size:22px;
+  padding:12px 30px;
   border-radius:10px;
   border:none;
+}
+
+/* CONFIGURAÇÃO */
+#configScreen{
+  display:none;
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,0.7);
+  color:white;
+  font-size:24px;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  gap:12px;
+  z-index:20;
 }
 
 /* ROTATE */
@@ -50,12 +62,12 @@ body{
   font-size:30px;
   align-items:center;
   justify-content:center;
-  z-index:20;
+  z-index:30;
 }
 
 /* GAME */
-#game{display:none;}
-canvas{display:block;}
+#game{ display:none; }
+canvas{ display:block; }
 
 /* BOTÕES */
 .btn{
@@ -88,26 +100,35 @@ canvas{display:block;}
   position:fixed;
   top:60px;
   right:15px;
-  width:180px;
   display:none;
-  flex-wrap:wrap;
-  gap:6px;
+  flex-direction:column;
+  gap:8px;
   background:rgba(0,0,0,0.6);
   padding:10px;
   border-radius:10px;
   z-index:30;
 }
-.emote{font-size:22px;}
+.emote{
+  font-size:22px;
+}
 </style>
 </head>
 
 <body>
 
+<!-- TELA DE TÍTULO -->
 <div id="titleScreen">
   <h1>🐱 Rikcat Adventure</h1>
-  <input id="roomInput" placeholder="Nome da sala">
   <button id="soloBtn">Solo</button>
-  <button id="multiBtn">Entrar na Sala</button>
+  <button id="multiBtn">Multiplayer Online</button>
+</div>
+
+<!-- TELA DE CONFIGURAÇÃO -->
+<div id="configScreen">
+  <h2>Escolha personagem</h2>
+  <button id="chooseRikcat">🐱 Rikcat</button>
+  <button id="choosePolvo">🐙 Polvo</button>
+  <button id="startBtn">Começar</button>
 </div>
 
 <div id="rotate">Vire o celular</div>
@@ -120,14 +141,12 @@ canvas{display:block;}
   <div id="jump" class="btn"></div>
   <div id="attack" class="btn"></div>
 
+  <!-- EMOTES -->
   <button id="emoteBtn">😺</button>
   <div id="emoteMenu">
     <button class="emote">😀</button>
     <button class="emote">😡</button>
     <button class="emote">😴</button>
-    <button class="emote">😱</button>
-    <button class="emote">😂</button>
-    <button class="emote">😍</button>
   </div>
 </div>
 
