--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>Rikcat Adventure — Salas Online</title>
+<title>Rikcat Adventures v1</title>
+
 <style>
 body{
   margin:0;
@@ -32,25 +33,6 @@ body{
   font-size:22px;
   padding:12px 30px;
   border-radius:10px;
-  border:none;
-  cursor:pointer;
-}
-
-/* CONFIGURAÇÕES */
-#configScreen{
-  display:flex;
-  flex-direction:column;
-  gap:10px;
-  margin-top:20px;
-}
-#configScreen label{
-  color:white;
-  font-size:18px;
-}
-#configScreen select, #configScreen input[type=color], #configScreen input[type=text]{
-  padding:5px;
-  font-size:16px;
-  border-radius:5px;
   border:none;
 }
 
@@ -112,7 +94,25 @@ canvas{ display:block; }
 }
 .emote{
   font-size:22px;
-  cursor:pointer;
+}
+
+/* CONFIGURAÇÕES */
+#configMenu{
+  display:none;
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,0.7);
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  gap:15px;
+  z-index:40;
+  color:white;
+}
+#configMenu button, #configMenu input, #configMenu select{
+  font-size:20px;
+  padding:8px 20px;
+  border-radius:8px;
 }
 </style>
 </head>
@@ -120,34 +120,16 @@ canvas{ display:block; }
 <body>
 
 <div id="titleScreen">
-  <h1>🐱 Rikcat Adventure</h1>
-  
-  <!-- Botões para iniciar -->
+  <h1>🐱 Rikcat Adventures</h1>
   <button id="soloBtn">Solo</button>
   <button id="multiBtn">Multiplayer Online</button>
-
-  <!-- CONFIGURAÇÕES -->
-  <div id="configScreen">
-    <label for="skinSelect">Skin:</label>
-    <select id="skinSelect">
-      <option value="rikcat">Rikcat 🐱</option>
-      <option value="polvo">Polvo 🐙</option>
-    </select>
-
-    <label for="colorSelect">Cor (Rikcat):</label>
-    <input type="color" id="colorSelect" value="#FFB000">
-
-    <label for="roomInput">Sala:</label>
-    <input type="text" id="roomInput" placeholder="Digite o nome da sala">
-  </div>
+  <button id="configBtn">Configurações</button>
 </div>
 
 <div id="rotate">Vire o celular</div>
 
 <div id="game">
   <canvas id="canvas"></canvas>
-
-  <!-- BOTÕES -->
   <div id="left" class="btn"></div>
   <div id="right" class="btn"></div>
   <div id="jump" class="btn"></div>
@@ -156,10 +138,28 @@ canvas{ display:block; }
   <!-- EMOTES -->
   <button id="emoteBtn">😺</button>
   <div id="emoteMenu">
-    <button class="emote">😀</button>
+    <button class="emote"></button>
+    <button class="emote">😄</button>
     <button class="emote">😡</button>
     <button class="emote">😴</button>
+    <button class="emote">😲</button>
+    <button class="emote">[👁🫦👁]💅</button>
   </div>
+</div>
+
+<!-- CONFIGURAÇÕES -->
+<div id="configMenu">
+  <h2>Configurações</h2>
+  <label>Skin:</label>
+  <select id="skinSelect">
+    <option value="rikcat">Rikcat</option>
+    <option value="polvo">Polvo</option>
+  </select>
+  <label>Cor:</label>
+  <input type="color" id="colorPicker" value="#FFB000">
+  <label>Nome da Sala:</label>
+  <input type="text" id="roomInput" value="Sala1">
+  <button id="configBackBtn">Voltar</button>
 </div>
 
 <script type="module" src="firebase.js"></script>
