--- a/index.html
+++ b/index.html
@@ -5,99 +5,42 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title>Rikcat Adventures v1</title>
 <style>
-body {
-    margin: 0;
-    overflow: hidden;
-    background: #6aa5ff;
-    font-family: sans-serif;
-}
+    body { margin: 0; overflow: hidden; background: #6aa5ff; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+    #titleScreen {
+        position: fixed; inset: 0; background: linear-gradient(180deg, #6aa5ff 0%, #4a90e2 100%);
+        display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 15px; z-index: 10;
+    }
+    #titleScreen h1 { color: white; font-size: 48px; text-shadow: 2px 2px 0 #000; margin-bottom: 20px; }
+    #titleScreen button {
+        font-size: 18px; padding: 12px 40px; border-radius: 25px; border: none; cursor: pointer;
+        background: white; color: #4a90e2; font-weight: bold; transition: 0.2s; box-shadow: 0 4px 0 #ccc;
+    }
+    #titleScreen button:hover { transform: translateY(-2px); box-shadow: 0 6px 0 #ccc; }
+    
+    #rotate { display: none; position: fixed; inset: 0; background: #222; color: white; font-size: 24px; align-items: center; justify-content: center; z-index: 100; text-align: center; padding: 20px; }
+    
+    canvas { display: block; touch-action: none; }
 
-/* TELA DE TÍTULO */
-#titleScreen {
-    position: fixed;
-    inset: 0;
-    background: #6aa5ff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
-    z-index: 10;
-}
-#titleScreen h1 {
-    color: white;
-    font-size: 42px;
-}
-#titleScreen button {
-    font-size: 22px;
-    padding: 12px 30px;
-    border-radius: 10px;
-    border: none;
-}
+    /* CONTROLES MOBILE */
+    .btn {
+        position: fixed; width: 65px; height: 65px; background: rgba(255,255,255,0.2);
+        border-radius: 50%; font-size: 28px; display: flex; align-items: center; justify-content: center;
+        user-select: none; border: 2px solid rgba(255,255,255,0.4); z-index: 5;
+    }
+    .btn:active { background: rgba(255,255,255,0.5); }
+    #left { bottom: 30px; left: 30px; }
+    #right { bottom: 30px; left: 110px; }
+    #jump { bottom: 30px; right: 30px; background: rgba(255, 255, 255, 0.4); }
+    #attack { bottom: 110px; right: 35px; width: 55px; height: 55px; }
 
-/* ROTATE */
-#rotate {
-    display: none;
-    position: fixed;
-    inset: 0;
-    background: black;
-    color: white;
-    font-size: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 20;
-}
-
-/* GAME */
-#game { display: none; }
-canvas { display: block; }
-
-/* BOTÕES */
-.btn {
-    position: fixed;
-    width: 70px;
-    height: 70px;
-    background: rgba(255,255,255,0.35);
-    border-radius: 50%;
-    font-size: 32px;
-    text-align: center;
-    line-height: 70px;
-}
-.btn:active {
-    transform: scale(0.9);
-    background: rgba(255,255,255,0.6);
-}
-
-/* POSIÇÃO DOS BOTÕES */
-#left { bottom: 20px; left: 20px; }
-#right { bottom: 20px; left: 110px; }
-#jump { bottom: 20px; left: 200px; }
-#attack { bottom: 100px; left: 110px; }
-
-/* EMOTES */
-#emoteBtn {
-    position: fixed;
-    top: 15px;
-    right: 15px;
-    font-size: 26px;
-    z-index: 30;
-}
-#emoteMenu {
-    position: fixed;
-    top: 60px;
-    right: 15px;
-    display: none;
-    flex-direction: column;
-    gap: 8px;
-    background: rgba(0,0,0,0.6);
-    padding: 10px;
-    border-radius: 10px;
-    z-index: 30;
-}
-.emote {
-    font-size: 22px;
-}
+    /* EMOTES */
+    #emoteBtn { position: fixed; top: 20px; right: 20px; font-size: 30px; background: none; border: none; cursor: pointer; z-index: 10; }
+    #emoteMenu {
+        position: fixed; top: 70px; right: 20px; display: none; flex-direction: row; gap: 10px;
+        background: rgba(0,0,0,0.7); padding: 10px; border-radius: 15px; z-index: 10;
+    }
+    .emote { font-size: 24px; background: none; border: none; cursor: pointer; transition: 0.2s; }
+    .emote:hover { transform: scale(1.3); }
 </style>
 </head>
 <body>
@@ -106,25 +49,23 @@ canvas { display: block; }
     <h1>🐱 Rikcat Adventures</h1>
     <button id="soloBtn">Solo</button>
     <button id="multiBtn">Multiplayer Online</button>
-    <button id="configBtn">⚙️ Configurações</button>
 </div>
 
-<div id="rotate">Vire o celular</div>
+<div id="rotate">🔄 Por favor, vire seu celular para o modo Paisagem (Deitado)</div>
 
-<div id="game">
+<div id="game" style="display:none">
     <canvas id="canvas"></canvas>
-
     <div id="left" class="btn">⬅️</div>
     <div id="right" class="btn">➡️</div>
-    <div id="jump" class="btn">⬆️</div>
+    <div id="jump" class="btn">🚀</div>
     <div id="attack" class="btn">🐾</div>
 
-    <!-- EMOTES -->
     <button id="emoteBtn">😺</button>
     <div id="emoteMenu">
         <button class="emote">😀</button>
         <button class="emote">😡</button>
         <button class="emote">😴</button>
+        <button class="emote">💎</button>
     </div>
 </div>
 
