--- a/index.html
+++ b/index.html
@@ -13,91 +13,102 @@ body{
   font-family:sans-serif;
 }
 
-/* TELAS */
 #titleScreen, #configScreen{
   position:fixed;
   inset:0;
+  background:#6aa5ff;
   display:flex;
   flex-direction:column;
   align-items:center;
   justify-content:center;
-  gap:14px;
+  gap:15px;
   z-index:10;
 }
+
 #configScreen{
-  background:rgba(0,0,0,0.85);
   display:none;
+  background:rgba(0,0,0,0.85);
   color:white;
 }
 
-/* GAME */
 #game{display:none;}
-canvas{display:block}
+canvas{display:block;}
 
-/* BOTÕES */
 button{
-  font-size:18px;
-  padding:12px 28px;
+  font-size:20px;
+  padding:12px 30px;
   border-radius:12px;
   border:none;
-  font-weight:bold;
 }
-button:active{transform:scale(0.95)}
+
+/* CONFIG */
+.config-box{
+  background:#4a90e2;
+  padding:20px;
+  border-radius:15px;
+  display:flex;
+  flex-direction:column;
+  gap:10px;
+  width:260px;
+}
 
 /* CONTROLES */
 .btn{
   position:fixed;
   width:70px;
   height:70px;
-  border-radius:50%;
   background:rgba(255,255,255,0.35);
+  border-radius:50%;
+  font-size:32px;
   display:flex;
   align-items:center;
   justify-content:center;
-  font-size:28px;
   user-select:none;
 }
-#left{bottom:30px;left:30px}
-#right{bottom:30px;left:120px}
-#jump{bottom:30px;right:30px}
+
+#left{bottom:30px; left:30px;}
+#right{bottom:30px; left:120px;}
+#jump{bottom:30px; right:30px;}
 
 /* CHAT */
 #openChatBtn{
   position:fixed;
   top:15px;
   left:15px;
+  font-size:24px;
   width:50px;
   height:50px;
   border-radius:50%;
-  background:rgba(255,255,255,0.4);
+  background:rgba(255,255,255,0.5);
   display:none;
   align-items:center;
   justify-content:center;
-  font-size:24px;
 }
-#chatBox{
+
+#chatBoxWrap{
   position:fixed;
   top:80px;
   left:15px;
   width:260px;
-  height:180px;
-  background:rgba(0,0,0,0.6);
-  color:white;
+  height:200px;
+  background:rgba(0,0,0,0.7);
   display:none;
   flex-direction:column;
   border-radius:10px;
 }
-#messages{
+
+#chatBox{
   flex:1;
-  padding:8px;
   overflow-y:auto;
+  padding:10px;
+  color:white;
   font-size:14px;
 }
+
 #chatInput{
   border:none;
   padding:10px;
   outline:none;
-  border-radius:0 0 10px 10px;
 }
 </style>
 </head>
@@ -105,36 +116,35 @@ button:active{transform:scale(0.95)}
 <body>
 
 <div id="titleScreen">
-  <h1 style="color:white">🐱 Rikcat Adventures</h1>
+  <h1 style="color:white;">🐱 Rikcat Adventures</h1>
   <button id="soloBtn">Solo</button>
-  <button id="multiBtn">Multiplayer</button>
+  <button id="multiBtn">Multiplayer Online</button>
   <button id="configBtn">⚙️ Configurações</button>
 </div>
 
 <div id="configScreen">
-  <h2>Configurações</h2>
-  <input id="nickInput" placeholder="Seu nick" maxlength="12">
-  <select id="skinSelect">
-    <option value="rikcat">Rikcat</option>
-    <option value="polvo">Polvo</option>
-  </select>
-  <button id="saveConfig">Salvar</button>
+  <div class="config-box">
+    <h3>Configurações</h3>
+    <input id="nickInput" placeholder="Seu nick" maxlength="12">
+    <button id="saveConfig">Salvar</button>
+  </div>
 </div>
 
 <div id="game">
   <canvas id="canvas"></canvas>
 
   <div id="openChatBtn">💬</div>
-  <div id="chatBox">
-    <div id="messages"></div>
+  <div id="chatBoxWrap">
+    <div id="chatBox"></div>
     <input id="chatInput" placeholder="Mensagem...">
   </div>
 
   <div id="left" class="btn">⬅️</div>
   <div id="right" class="btn">➡️</div>
-  <div id="jump" class="btn">⬆️</div>
+  <div id="jump" class="btn">🚀</div>
 </div>
 
+<script type="module" src="firebase.js"></script>
 <script type="module" src="game.js"></script>
 </body>
 </html>
