--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div id="left" class="btn">⬅️</div>
     <div id="right" class="btn">➡️</div>
-    <div id="jump" class="btn">🚀</div>
+    <div id="jump" class="btn">⬆️</div>
 
     <div id="openChatBtn">💬</div>
     <div id="chatBoxWrap">
